music-data: adjust album, artist and track to a single style